fixing line spacing

--- a/client/src/component/TextArea/textArea.css
+++ b/client/src/component/TextArea/textArea.css
@@ -8,6 +8,7 @@
   border-radius: 5px;
   padding: 10px 16px;
   font-size: inherit;
+  line-height: 1.5;
   outline: 1px solid var(--no-focus);
 }
 .textarea-main .textarea:focus {
